.kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-template
  namespace: default
  labels:
    app: fastapi-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-template
  template:
    metadata:
      labels:
        app: fastapi-template
    spec:
      containers:
        - name: fastapi-template
          image: ghcr.io/unruffled-nightingale/fastapi_template:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-container-registry-secret
