.kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-template
  namespace: default
  labels:
    app: fastapi-template
spec:
  selector:
    app: fastapi-template
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
